--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "Erick de Leon",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "jsonwebtoken": "^8.5.1",
     "mkdirp": "^1.0.4",
     "mongoose": "^5.12.9",
     "nodemon": "^2.0.7",
